<resources>
    <string name="app_name">HzCloud</string>
    <string name="Quotations">付出不亚于任何人的努力，让优秀成为一种习惯！</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theme">主题</string>
    <string name="done">完成</string>
    <string name="about_me">\n简 书：<a href="http://www.jianshu.com/users/f07458c1a8f3/top_articles">dongjunkun</a>\n\nGithub：<a href="https://github.com/dongjunkun">dongjunkun</a></string>
    <string name="all">全部</string>
    <string name="close">关闭</string>
    <string name="setting">设置</string>
    <string name="fuli">福利</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="video">休息视频</string>
    <string name="front">前端</string>
    <string name="resource">拓展资源</string>
    <string name="app">App</string>
    <string name="about">关于我</string>
    <string name="more">瞎推荐</string>
    <string name="start_chat">发起会话</string>
    <string name="network_not_available">网络不可用</string>
    <string name="login_api_fail">登录请求接口失败</string>
    <string name="sync_userinfo_api_fail">同步用户信息接口请求失败</string>
    <string name="get_token_api_fail">获取token请求接口失败</string>
    <string name="sync_group_api_fail">同步群组信息请求接口失败</string>
    <string name="phone_or_psw_error">手机或者密码错误</string>
    <string name="phone_number_is_null">手机号不能为空</string>
    <string name="Illegal_phone_number">非法手机号</string>
    <string name="password_is_null">密码不能为空</string>
    <string name="password_cannot_contain_spaces">密码不能包含空格</string>
    <string name="phone_number_available">手机号可用</string>
    <string name="phone_number_has_been_registered">手机号已被注册</string>
    <string name="messge_send">短信已发出,请注意查收</string>
    <string name="message_frequency">短信发送频率超限</string>
    <string name="captcha_overdue">验证码过期,请重新请求</string>
    <string name="verification_code_error">验证码错误</string>
    <string name="register_success">注册成功</string>
    <string name="forgot_password">找回密码</string>
    <string name="new_user">新用户</string>
    <string name="Login">登录</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="nickname">昵称</string>
    <string name="code">短信验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="register">注册</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm">确认</string>
    <string name="forget_password">忘记密码</string>
    <string name="cancel">取消</string>
    <string name="Done">完成</string>
    <string name="exit_app">确定退出应用?</string>
    <string name="No_friends">暂无好友</string>
    <string name="Search">搜索</string>
    <string name="new_friends">新的朋友</string>
    <string name="group">群组</string>
    <string name="public_service">公众号</string>
    <string name="chatroom">聊天室</string>
    <string name="groups">群聊</string>
    <string name="chatroom1">聊天室 I</string>
    <string name="add_success">加入成功</string>
    <string name="not_group_members">非群组成员不能查看群组详情</string>
    <string name="check_network">请检查网络</string>
    <string name="chatroom2">聊天室 II</string>
    <string name="chatroom3">聊天室 III</string>
    <string name="chatroom4">聊天室 IV</string>
    <string name="agreed_friend">已同意好友关系</string>
    <string name="agree">接&#160;&#160;&#160;受</string>
    <string name="request">已请求</string>
    <string name="ignore">已忽略</string>
    <string name="added">已添加</string>
    <string name="deleted">已删除</string>
    <string name="mobile_phone">手机号</string>
    <string name="change_password">密码修改</string>
    <string name="select_group_member">选择群组成员</string>
    <string name="remove_group_member">移除群组成员</string>
    <string name="add_group_member">添加群组成员</string>
    <string name="edit_group_name">填写群名称(2-10字)</string>
    <string name="create_group">创建群组</string>
    <string name="created_group">创建了群组</string>
    <string name="you">你</string>
    <string name="request_friends">请求添加你为好友</string>
    <string name="edit_phone">请输入 11 位手机号</string>
    <string name="original_password">原密码不能为空</string>
    <string name="new_password_not_null">新密码不能为空</string>
    <string name="confirm_password_not_null">确认密码不能为空</string>
    <string name="original_password_mistake">原密码填写错误</string>
    <string name="passwords_invalid">密码必须为6-16位字符，区分大小写</string>
    <string name="passwords_do_not_match">填写的确认密码与新密码不一致</string>
    <string name="original_password_text">初始密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="group_info">群组信息</string>
    <string name="group_member_size">全部群成员</string>
    <string name="group_name">群名称</string>
    <string name="confirm_quit_group">确认退出群组?</string>
    <string name="confirm_dismiss_group">确认解散群组?</string>
    <string name="clean_history">是否清除会话聊天记录?</string>
    <string name="set_top">会话置顶</string>
    <string name="message_notice">消息免打扰</string>
    <string name="search_message">查找聊天记录</string>
    <string name="clean_message">清除聊天记录</string>
    <string name="send_message">发起聊天</string>
    <string name="quit_group">删除并退出</string>
    <string name="dismiss_group">解散并退出</string>
    <string name="user_details">用户详情</string>
    <string name="black_state">黑名单状态</string>
    <string name="divided_string">、</string>
    <string name="change_group_name">修改群名称为</string>
    <string name="quit_groups">退出了群组</string>
    <string name="dismiss_groups">解散了群组</string>
    <string name="join_group">加入了群组</string>
    <string name="to_join_group">加入了群组</string>
    <string name="invitation">邀请</string>
    <string name="remove_group_before_str">将</string>
    <string name="remove_group_after_str">移出了群组</string>
    <string name="my_groups">群组</string>
    <string name="code_is_null">验证码为空</string>
    <string name="name_is_null">昵称不能为空</string>
    <string name="name_contain_spaces">昵称不能包含空格</string>
    <string name="remove_group_members">确认移除以下群成员?</string>
    <string name="add_successful">添加成功</string>
    <string name="remove_successful">移除成功</string>
    <string name="least_one_friend">至少选择一位好友</string>
    <string name="not_send_code">未向服务端获取验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="clear_success">清除成功</string>
    <string name="clear_failure">清除失败</string>
    <string name="change_group_info">更改群组信息</string>
    <string name="new_group_name">新的群名称</string>
    <string name="update_success">更改成功</string>
    <string name="quit_success">退出成功</string>
    <string name="dismiss_success">解散成功</string>
    <string name="group_name_not_is_null">群组昵称不能为空</string>
    <string name="group_name_size_is_one">群名称不少于2个字</string>
    <string name="create_group_success">群组创建成功</string>
    <string name="group_header_api_fail">群组头像接口请求失败</string>
    <string name="group_create_api_fail">群组创建接口请求失败</string>
    <string name="upload_portrait_failed">上传头像失败</string>
    <string name="phone_unregister">此号码未被注册</string>
    <string name="group_portrait">群头像</string>
    <string name="add_friend">加为好友</string>
    <string name="add_text">加好友信息...</string>
    <string name="request_success">请求成功</string>
    <string name="can_not_add_yourself">自己不能添加自己为好友</string>
    <string name="new_name">新昵称</string>
    <string name="portrait_update_success">头像更新成功</string>
    <string name="chat">会话</string>
    <string name="contacts">通讯录</string>
    <string name="discover">发现</string>
    <string name="me">我</string>
    <string name="mine_about">关于 SealTalk</string>
    <string name="my_wallet">我的钱包</string>
    <string name="mine_service">意见反馈</string>
    <string name="mine_setting">账号设置</string>
    <string name="account_setting">账号设置</string>
    <string name="exit_login">退出登录</string>
    <string name="clear_cache">清除缓存</string>
    <string name="privacy">隐私</string>
    <string name="new_message">接收新消息通知</string>
    <string name="message_show_details">通知显示消息详情</string>
    <string name="launched_location_sharing">发起了位置共享</string>
    <string name="location_sharing_ended">位置共享已结束</string>
    <string name="location">位置</string>
    <string name="send_location">发送位置</string>
    <string name="real_time_location_sharing">实时位置共享</string>
    <string name="fetching">获取中……</string>
    <string name="geographical_position">地理位置</string>
    <string name="you_are_sharing_location">你正在共享位置</string>
    <string name="person_is_sharing_loaction">人正在共享位置</string>
    <string name="persons_are_sharing_loaction">人正在共享位置</string>
    <string name="location_sharing_exit_promt">退出当前页面将会终止实时位置共享,确定退出？</string>
    <string name="prompt">提示</string>
    <string name="launched_a_location_sharing">我发起了位置共享</string>
    <string name="sdk_version_update">SDK版本</string>
    <string name="sealtalk_version_update">SealTalk版本</string>
    <string name="all_group_member">全部群成员</string>
    <string name="group_member_online_status">群成员在线状态</string>
    <string name="group_announcement">群公告</string>
    <string name="group_code">群二维码</string>
    <string name="total_member">群成员</string>
    <string name="select_contact">选择联系人</string>
    <string name="current_password">原密码</string>
    <string name="password_hint">6-16个字符,区分大小写</string>
    <string name="start_voice">语音通话</string>
    <string name="start_video">视频聊天</string>
    <string name="browser_download">浏览器打开</string>
    <string name="loacation_download">本地下载</string>
    <string name="update_app_model_prepare">准备下载</string>
    <string name="update_app_model_progress">正在下载 %1$d%2$s</string>
    <string name="update_app_model_success">下载成功(点击安装)</string>
    <string name="update_app_model_error">下载失败(点击浏览器下载)</string>
    <string name="downloading_apk">正在后台下载...</string>
    <string name="empty_group_notice">请编辑群公告</string>
    <string name="group_notice_exist_confirm">退出本次编辑</string>
    <string name="group_notice_post_confirm">该公告会通知全部群成员，是否发布？</string>
    <string name="group_notice_prefix">\@所有人\n</string>
    <string name="search_friend">添加好友</string>
    <string name="setdisplayname">设置备注</string>
    <string name="new_and_old_password">新旧密码一致</string>
    <string name="nickname_show">昵称:</string>
    <string name="ac_item_friend_nick_name">昵称:%1$s</string>
    <string name="ac_search_no_result">没有搜索到%1$s相关的会话</string>
    <string name="other_devices_login">账号在其它设备登录</string>
    <string name="new_message_notice_title">消息免打扰</string>
    <string name="other_devices_text">您的账号在别的设备上登录，您被迫下线!</string>
    <string name="i_know">知道了</string>
    <string name="update_name">昵称更改</string>
    <string name="ac_search_no_result_pre">没有搜到</string>
    <string name="ac_search_no_result_suffix">相关的信息</string>
    <string name="ac_search_chat_title">聊天记录</string>
    <string name="ac_search_chat_detail">共%1$d条与</string>
    <string name="ac_search_chat_detail_one">共</string>
    <string name="ac_search_chat_detail_two">条与</string>
    <string name="ac_search_chat_detail_three">相关的聊天记录</string>
    <string name="ac_search_nick_name">昵称： </string>
    <string name="ac_contact_nick_name">昵称:</string>
    <string name="ac_search_friend">联系人</string>
    <string name="ac_search_group">群组</string>
    <string name="ac_search_chatting_records">聊天记录</string>
    <string name="ac_search_more_friend">查看更多联系人</string>
    <string name="ac_search_more_group">查看更多群组</string>
    <string name="ac_search_more_chatting_records">查看更多聊天记录</string>
    <string name="search_item_chat_records">%d条相关记录</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="web_online">网页在线</string>
    <string name="pc_online">电脑在线</string>
    <string name="phone_online">手机在线</string>
    <string name="ipad_online">iPad在线</string>
    <string name="imac_online">iMac 在线</string>
    <string name="set_user_online_status">设置用户在线状态</string>
    <string name="read_receipt_detail">回执详情</string>
    <string name="read_receipt_unread_persons">%1$d人未读</string>
    <string name="read_receipt_read_persons">%1$d人已读</string>
</resources>