<?xml version="1.0" encoding="utf-8"?>
<hz.com.hzcloud.widget.ResideLayout
    android:id="@+id/resideLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<ImageView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/de_bg"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@mipmap/de_bg"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/top_menu"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:orientation="vertical">

                <hz.com.hzcloud.widget.CircleImageView
                    android:id="@+id/avatar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="55dp"
                    android:src="@mipmap/seal_app_logo"/>

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/Quotations"
                    android:textSize="16sp" />

            </LinearLayout>

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_above="@+id/bottom_menu"
                android:scrollbars="none"
                android:layout_below="@+id/top_menu">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/all"
                        style="@style/MenuStyle"
                        android:text="@string/all" />

                    <TextView
                        android:id="@+id/fuli"
                        style="@style/MenuStyle"
                        android:text="@string/fuli" />

                    <TextView
                        android:id="@+id/android"
                        style="@style/MenuStyle"
                        android:text="@string/android" />

                    <TextView
                        android:id="@+id/ios"
                        style="@style/MenuStyle"
                        android:text="@string/ios" />

                    <TextView
                        android:id="@+id/video"
                        style="@style/MenuStyle"
                        android:text="@string/video" />

                    <TextView
                        android:id="@+id/front"
                        style="@style/MenuStyle"
                        android:text="@string/front" />

                    <TextView
                        android:id="@+id/resource"
                        style="@style/MenuStyle"
                        android:text="@string/resource" />

                    <TextView
                        android:id="@+id/app"
                        style="@style/MenuStyle"
                        android:text="@string/app" />

                    <TextView
                        android:id="@+id/more"
                        style="@style/MenuStyle"
                        android:text="@string/more" />

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/bottom_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:padding="12dp"
                    android:text="关于"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:padding="12dp"
                    android:text="主题"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></LinearLayout>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/bar_layout"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@color/colorPrimary"
            android:gravity="bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/realtabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="@color/white"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/ddd"/>

        <hz.com.hzcloud.widget.FragmentTabHost
            android:id="@android:id/tabhost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0"/>
        </hz.com.hzcloud.widget.FragmentTabHost>

    </LinearLayout>
</hz.com.hzcloud.widget.ResideLayout>